--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ walkdir = { version = "2.3.2", optional = true }
 # NOTE: we don't depend on this crate but we need to activate this feature otherwise it's super slow
 walrus = { version = "0.19.0", features = ["parallel"] }
 wasm-bindgen-cli-support = "0.2.68"
-xtask-watch = "0.1.6"
+xtask-watch = { git = "https://github.com/matthew-dews/xtask-watch.git" }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.112"
